# ha-solarman

./: pyproject.toml  requirements.txt
custom_components/solarman/: parser.py  sensor.py  solarman.py
home_assistant_solarman/custom_components/solarman/: __init__.py  config_flow.py  const.py  services.py  solarman.py
