[project]
name = "ha-solarman"
version = "1.7.0"
description = "Home Assistant component for Solarman collectors used with a variety of inverters."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [
    { name = "Jonathan McCrohan", email = "jmccrohan@gmail.com" },
    { name = "Mateusz Neumann", email = "mateumann@gmail.com" },
]
keywords = ["solarman", "igen-tech", "modbus", "solar", "inverter", "solarmanv5"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "umodbus",
    "homeassistant==2025.5.2",
    "pysolarmanv5",
]


[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
